tests/baselines/reference/multiLineContextDiagnosticWithPretty.errors.txt
[91m● [0m[96mmultiLineContextDiagnosticWithPretty.ts[0m:[93m2[0m:[93m5[0m  [91mError[0m TS2322
| a: {
  [91m▔[0m
Type '{ a: { b: string; }; }' is not assignable to type '{ c: string; }'.
  Object literal may only specify known properties, and 'a' does not exist in type '{ c: string; }'.


==== multiLineContextDiagnosticWithPretty.ts (1 errors) ====
    const x: {c: string} = {
        a: {
        ~
!!! error TS2322: Type '{ a: { b: string; }; }' is not assignable to type '{ c: string; }'.
!!! error TS2322:   Object literal may only specify known properties, and 'a' does not exist in type '{ c: string; }'.
            b: '',
        }
    };
    
Found 1 error in multiLineContextDiagnosticWithPretty.ts[90m:2[0m

